Closed Bug 863957 Opened 12 years ago Closed 12 years ago

"Assertion failure: JSID_IS_STRING(iden)" with Components.interfacesByID

Categories

(Core :: XPConnect, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla24
Tracking Status
firefox23 - wontfix
firefox24 + fixed

People

(Reporter: jruderman, Assigned: evilpies)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(3 files)

Because of recent changes (bug 790732 and bug 834697), this testcase requires: user_pref("dom.xbl_scopes", false); Assertion failure: JSID_IS_STRING(iden), at jsapi.h:1287
Attached file stack (gdb)
The code added in bug 856477 makes this function look like this: RootedString str(cx, JSID_TO_STRING(id)); if (!mManager || !JSID_IS_STRING(id)) which is no good. Looks like the second patch in that bug might fix this....
Blocks: 856477
Keywords: regression
Assignee: nobody → evilpies
Pretty sure I fixed all instances of this problem. The testcase however could be landed.
Attached patch v1Splinter Review
Surprise, this problem is still there!
Attachment #745375 - Flags: review?(bzbarsky)
Attachment #745375 - Flags: review?(bzbarsky) → review+
Time to add checkin-needed? and nominate for uplift to Aurora
Flags: needinfo?(evilpies)
Check-in right now. I am not sure if we need to uplift this. I believe this can't be trigger from web code.
Flags: needinfo?(evilpies)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
Can we get an uplift nomination for FF23?
Flags: needinfo?(evilpies)
Scratch that, read comment 7 - we'll let this ride the trains and ship in FF24.
Flags: needinfo?(evilpies)
Why do I get "JavaScript error: https://bug863957.bugzilla.mozilla.org/attachment.cgi?id=739911, line 4: Components.interfacesByID is undefined" using the testcase in a debug build ?
Probably because of bug 790732, which replaced the "real" Components object (which has an 'interfacesByID' method) with a shim.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: