Bug 863957 - Check if jsid is really a string in Components.interfacesByID. r=bz